# kdp-scraper

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  config.py  demo.tape  main.py  pyproject.toml  requirements.txt  skill.md
src/: api_client.py  logger.py  models.py  parsers.py  parsers_bestseller.py  providers.py  stage1_categories.py  stage1_nodes.py  stage2_bestsellers.py  stage2_keywords.py  stage3_expand.py  stage3_serp.py  stage4_bsr.py  stage5_score.py  state_manager.py
